--- a/static/assets/css/main.css
+++ b/static/assets/css/main.css
@@ -2061,6 +2061,7 @@
 			padding: 3.5em 3em 1em 7em ;
 			width: 50%;
 			border-top: solid 1px rgba(255, 255, 255, 0.15);
+			border-bottom: solid 1px rgba(255, 255, 255, 0.15);
 			position: relative;
 		}
 
@@ -3253,7 +3254,7 @@
 		}
 
 		.wrapper.style1 {
-			background-color: #F9BF3B;
+			background-color: #E67E22;
 		}
 
 		.wrapper.style1-alt {
