--- a/static/assets/css/main.css
+++ b/static/assets/css/main.css
@@ -2580,7 +2580,7 @@
 				}
 
 				.wrapper.style3 .icon.major:before {
-					color: #b74e91;
+					color: #1F3A93;
 				}
 
 				.wrapper.style3-alt .icon.major:before {
@@ -3270,7 +3270,7 @@
 		}
 
 		.wrapper.style3 {
-			background-color: #89C4F4;
+			background-color: #1E8BC3;
 		}
 
 		.wrapper.style3-alt {
